fixed spreadable stack and propose candidates

--- a/perikles.css
+++ b/perikles.css
@@ -511,16 +511,17 @@
 }
 
 .prk_military[data-casualty="true"] {
+    transition: all 0.25s;
     box-shadow: 3px 3px 12px 5px #8a0303;
 }
 
 .prk_military[data-casualty="true"]:hover {
-    box-shadow: inset 3px 3px 12px 5px #8a0303;
+    box-shadow: inset 1px 1px 2px 2px #8a0303;
 }
 
 /* reverse blood shadow for retrieval */
 .prk_military[data-deadpool="button"] {
-    box-shadow: inset 3px 3px 12px 5px #8a0303;
+    box-shadow: inset 1px 1px 2px 2px #8a0303;
 }
 
 .prk_military[data-deadpool="button"]:hover {
